--- a/css/student.css
+++ b/css/student.css
@@ -10,6 +10,7 @@ html, body {
   }
 
   .hero {
+    margin-left: 60px;
     background: url("http://www.qygjxz.com/data/out/8/4083205-android-wallpaper-hd.jpeg") no-repeat center;
     background-size: cover;
     background-color: rgba(0, 0, 0, 0.8);
@@ -17,13 +18,16 @@ html, body {
     background-attachment: fixed;
     height: 100%;
     width: 100%;
-    padding: 60px;
+    padding-top: 60px;
+    padding-bottom: 60px;
+    padding-right: 60px;
   }
   
 .container {
     padding-top: 50px;
     padding-bottom: 20px;
-    width: 100%;
+    width: 97%;
+    margin: 20px;
     background-color: #0277bd ;
     opacity: 0.9;
 }
@@ -46,4 +50,173 @@ h3 {
 
 .cont {
   padding: 2px 16px;
+}
+
+.section {
+  width: 100%;
+display: block;
+overflow: hidden;
+padding: 0;
+}
+
+.section-grey {
+width: 100;
+background: #f5f5f5 !important;
+padding: 50px 0;
+}
+
+.section-paragraph {
+  color: #555;
+  text-align: left;
+}
+
+.section-white {
+  background: white;
+  padding: 50px 0;
+}
+
+.hero-down {
+  position: absolute;
+  bottom: 0;
+  font-size: 2em;
+  height: 2em;
+  color: #f5f5f5;
+  border-radius: 100%;
+}
+.hero-down:hover, .hero-down:focus {
+  color: #ccc;
+}
+.hero-down:active {
+  color: #f5f5f5;
+}
+.hero-down .btn-react {
+  background-color: #f5f5f5;
+  height: 100%;
+  width: 100%;
+  border-radius: 100%;
+  opacity: 0;
+  position: absolute;
+}
+.hero-down i {
+  vertical-align: bottom;
+  position: relative;
+  top: 0.1em;
+}
+.hero .btn-react {
+  background-color: #f5f5f5;
+  height: 100%;
+  width: 100%;
+  border-radius: 100%;
+  opacity: 0;
+  position: absolute;
+}
+
+.fa-chevron-up {
+  color: #fff;
+  align-self: center
+}
+
+.footer {
+  display: block;
+  box-size: border-box;
+  -webkit-box-size: border-box;
+  padding: 40px 40px;
+  color: #555;
+  text-align: center;
+  background: #f5f5f5;
+}
+
+.footer p {
+  opacity: .65;
+}
+
+.sec2 {
+  display: block;
+  padding-top: 80px; 
+  margin-right: auto;
+  margin-left: auto;
+}
+
+#counter-stats {
+  margin-top: 50px;
+  width: 100%;
+  height: auto;
+}
+
+.stats {
+  text-align: center;
+  font-size: 35px;
+  font-weight: 700;
+  font-family: 'Montserrat', sans-serif;
+  text-transform: lowercase;
+}
+
+.stats .fa {
+  color: black;
+  font-size: 60px;
+}
+
+.counter {
+  color: black;
+}
+ h5 {
+   color: black;
+ }
+
+ a.button {
+  display: inline-block;
+  color: #FFF;
+  background-color: rgba(0, 0, 0, 0.55);
+  text-decoration: none;
+  padding: 10px;
+  border-radius: 10px;
+  margin-bottom: 10px;
+  transition: background 0.2s ease-out;
+}
+
+a.button:hover {
+  background-color: #555;
+}
+
+a.button.small {
+  background-color: #7f8c8d;
+  padding: 8px;
+  font-size: 0.8em;
+}
+
+a.button.small:hover {
+  background-color: #95a5a6;
+}
+
+.background-img {
+  background: url(http://www.qygjxz.com/data/out/8/4083205-android-wallpaper-hd.jpeg) no-repeat center;
+  background-size: cover;
+  background-color: rgba(0, 0, 0, 0.75);
+  background-blend-mode: multiply;
+  background-attachment: fixed;
+  padding-top: 50px;
+}
+
+.sidenav {
+  height: 100%;
+  width: 60px;
+  position: fixed;
+  z-index: 1;
+  top: 0;
+  left: 0;
+  background-color: #111;
+  overflow-x: hidden;
+  padding-top: 20px;
+}
+
+.sidenav a {
+  padding: 20px 6px 6px 6px;
+  text-decoration: none;
+  font-size: 25px;
+  color: #818181;
+  display: block;
+}
+
+.sidenav a:hover {
+  color: #f1f1f1;
 }
