--- a/css/admin.css
+++ b/css/admin.css
@@ -10,6 +10,13 @@ html, body {
     overflow-x: hidden;
   }
 
+.container {
+    width: 100%;
+    padding-left: 100px;
+    padding-right: 20px;
+    padding-top: 20px;
+}
+
   .sidenav {
     height: 100%;
     width: 60px;
@@ -32,4 +39,44 @@ html, body {
 
 .sidenav a:hover {
     color: #f1f1f1;
+}
+
+.card {
+    box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
+    transition: 0.3s;
+    width: 40%;
+    background: #2C343A;
+    width: 100%;
+    text-align:left;
+    padding:10px;
+  }
+  
+  .card:hover {
+    box-shadow: 8px 16px 32px 0 rgb(0, 0, 0);
+  }
+  
+  .cont {
+    padding: 2px 16px;
+  }
+
+  .glyphicon-heart {
+      color: greenyellow;
+  }
+
+.fa-android {
+    color: greenyellow;
+}
+
+h3 {
+    color: whitesmoke;
+}
+
+p {
+    color: white;
+    margin-top: 10px;
+    margin-bottom: 0px;
+}
+
+input {
+    background-color: #F1F1F1; 
 }
