--- a/css/student.css
+++ b/css/student.css
@@ -233,3 +233,14 @@ input[type=text] {
   border-bottom: 2px solid red;
 }
 
+.student {
+  box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
+  transition: 0.3s;
+  width: 40%;
+  background: rgb(43, 43, 46);
+  width: 100%;
+  text-align:left;
+  padding:10px;
+}
+
+
